# qac-eval

./: .CMakeLists.txt.swo  .gitignore  CMakeLists.txt  README.md  compile_commands.json  monitor.sh
Python/: analyse_bmlogs.py  ascii.txt  bing_collection.py  bmlog_processor.py  common-qids.csv  common_qids.py  convert_binglog.py  gen_random_strings.py  plotter.py  process_collection.py  sample-input.txt
Python/Notebooks/: BuildTimes.ipynb  Dataset Stats.ipynb  MemoryBenchmarks.ipynb  PQLogSample.ipynb  QueryTimes.ipynb  build-times.csv
Python/Notebooks/.ipynb_checkpoints/: BuildTimes-checkpoint.ipynb  PQLogSample-checkpoint.ipynb
TestHeapCount/: Heap.cpp  Heap.h  Memory.cpp  test.cpp
export/data/: append_dtime.sh  build-times.csv  time-benchmark.out  time-benchmark.tsv  wiki-build-times_300320_2258.csv  wiki-query-times_310320_0141.csv
export/data/mem-bm/: sample-out.csv
heap_count/: CMakeLists.txt  Heap.cpp  Makefile  Memory.cpp  Memory.h  mymem_alloc.hpp  test  test.cpp
include/: config.hpp  csvfile.h  myprog_opts.hpp  mytimers.hpp  prof_base.hpp  qac_impl.hpp
include/core/: collecion.hpp
include/memprof/: mem_usage.hpp  mprof_core.hpp
include/timeprof/: benchmark-build.hpp  benchmark_build.hpp  benchmark_query.hpp  benchmark_query_full.hpp  benchmark_query_plen.hpp
malloc_count/: CMakeLists.txt  malloc_count.c  malloc_count.h  memprofile.h  stack_count.c
src/: bm_build.cpp  bm_query.cpp  gt_benchmark-old.cpp  gt_benchmark.cpp  gt_benchmark_old.cpp  main.cpp  mem_benchmark.cpp  test_wrappers.cpp
src/bench-time/: benchmark_htrie.hpp
src/core/: CMakeLists.txt  collection.cpp  collection.hpp  config.hpp  dtypes.hpp  heap.cpp  heap.h  heap_mem.cpp  heap_mem.h  mem_map.cpp  mem_map.hpp  pqlog.cpp  pqlog.hpp  utils.hpp
src/qac_impl/: .htrie_wrapper.cpp.swo  CMakeLists.txt  IncNgTrie_wrapper.cpp  IncNgTrie_wrapper.hpp  dawgtrie_wrapper.cpp  dawgtrie_wrapper.hpp  dtypes.hpp  htrie_wrapper.cpp  htrie_wrapper.hpp  marisa_wrapper.cpp  marisa_wrapper.hpp  trie_impl.cpp
src/qac_impl/IncNgTrie/: CMakeLists.txt  active_node.h  brother_trie.cc  brother_trie.h  charset.h  dataset.cc  dataset.h  dtypes.hpp  easy_timer.cc  fastss_searcher.cc  fastss_searcher.h  fastssindex.cc  fastssindex.h  map_trie.cc  map_trie.h  resultset.h  searcher.backup  searcher_base.cc  searcher_base.h  searcher_base_test.backup  trie_base.cc  trie_base.h  util_test.cc  variants.h  vector_trie.cc  vector_trie.h
src/qac_impl/dawgdic/: Makefile  base-types.h  completer.h  config.status  dawg-builder.h  dawg-unit.h  dawg.h  dictionary-builder.h  guide.h  ranked-completer.h  ranked-guide-builder.h  trie_impl  trie_impl.cpp
src/qac_impl/dawgdic/include/: trie-impl.hpp
src/qac_impl/dawgdic/include/dawgdic/: base-types.h
src/qac_impl/dawgdic/src/: Makefile  dawgdic-build  dawgdic-find
src/qac_impl/dawgdic/src/.deps/: dawgdic-build.Po  dawgdic-find.Po
src/qac_impl/dawgdic/test/: Makefile  dawg-builder-test  ranked-completer-test  ranked-completer-test.cc  strings.out
src/qac_impl/dawgdic/test/.deps/: dawg-builder-test.Po  ranked-completer-test.Po
src/qac_impl/hat-trie/tsl/: htrie_hash.h
src/qac_impl/marisa/: README.md
src/qac_impl/marisa/include/marisa/: .key.h.swo  .keyset.h.swo
src/qac_impl/marisa/lib/: libmarisa.la
src/qac_impl/marisa/lib/pkgconfig/: marisa.pc
utils/: Makefile  checksum.md5  cweb-index.txt  cweb-sample.tsv  sample-collection  sample-collection.cpp  unique_chars.cpp
utils/sample-collection.dSYM/Contents/: Info.plist
utils/sample-collection.dSYM/Contents/Resources/DWARF/: sample-collection
