cmake_minimum_required(VERSION 3.5.1)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g\
    -Wno-unused-command-line-argument")
include_directories("/usr/local/opt/openssl/include")
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
file(GLOB QAC_SOURCES "*.cc" ".h")
add_library(IncNgTrie  SHARED ${QAC_SOURCES})
target_link_libraries(IncNgTrie "-L/usr/local/opt/openssl/lib" ssl)
target_link_libraries(IncNgTrie crypto)
